# fort_depend.py

./: .coveragerc  .gitignore  .readthedocs.yml  .travis.yml  INSTALLATION  LICENCE  Makefile  README  README.md  config.mk  configure.py  fll – Fortran Linked List Library.pptx  fll–FortranLinkedListLibrary.pptx  fort_depend.py  pyproject.toml  rules.mk  setup.cfg  setup.py  src_dir_path  src_dir_path.mk  template_v1.f90
.github/workflows/: black.yml  python_publish.yml  test.yml
accessories/: Makefile  src_dir_path.mk
accessories/fll_cat/: Makefile  depend.mk  fll_cat.f90  fll_cat.py  project.dep  src_dir_path.mk
accessories/fll_convert/: Makefile  depend.mk  fll_convert.f90  fll_convert.py  project.dep  src_dir_path.mk
accessories/ll_cat/: Makefile  ada.py  ll_cat.f90  project.dep
config/: compset.gfortran  compset.gfortran_debug  compset.x86_64  compset.x86_64_debug
data_util/: ERR_LINE_IDEF_SCRIPT  Makefile  depend.mk  fll_cat.f90  fll_cp.f90  fll_deattach.f90  fll_duplicate.f90  fll_funct_prt.f90  fll_getnbytes.f90  fll_getndata.f90  fll_locate.f90  fll_match_pattern.f90  fll_mk.f90  fll_mkdir.f90  fll_mods.f90  fll_mv.f90  fll_nnodes.f90  fll_out.f90  fll_read.f90  fll_read_ffa.f90  fll_read_record.f90  fll_read_ucd.f90  fll_rename.f90  fll_rm.f90  fll_scan_file.f90  fll_stich.f90  fll_sweep.f90  fll_type.f90  fll_write.f90  fll_write_ffa.f90  ll_cat.f90  ll_cp.f90  ll_deattach.f90  ll_duplicate.f90  ll_funct_prt.f90  ll_locate.f90  ll_mk.f90  ll_mods.f90  ll_modules  ll_mv.f90  (+11 more)
docs/: advanced_usage.rst  advanced_use.rst  basic_usage.rst  conf.py  fortdepend.rst  index.rst
examples/: Makefile  TEST1  fll_test.f90  fll_test_subr.f90  project.dep  src_dir_path.mk
examples/Example_MPI-IO/: Example_mpi-IO.f90  Makefile  Save_inivid_files.f90  create_data_set.f90  create_mpi_struct.f90  depend.mk  mpi-IO.f90  project.dep  read_input.f90  save_individ_files.f90  save_root_part_file.f90  src_dir_path.mk
examples/Read_Record/: Makefile  depend.mk  src_dir_path.mk  (+1 more)
fortdepend/: __init__.py  __main__.py  fort_depend.py  graph.py  preprocessor.py  smartopen.py  units.py
miscellaneous/: Makefile  src_dir_path.mk
mpi_util/: Makefile  depend.mk  fll_mpi_cp.f90  fll_mpi_cp_all.f90  fll_mpi_duplicate.f90  fll_mpi_mods.f90  fll_mpi_mv.f90  fll_mpi_proc_struct.f90  fll_mpi_read.f90  fll_mpi_sum.f90  fll_mpi_write.f90  fll_mpi_write_nm.f90  fll_mpi_write_snm.f90  project.dep  src_dir_path.mk
python_dep/: fort_depend.py
test/: Makefile  ll_test.f90  project.dep  src_dir_path  src_dir_path.mk
tests/: conftest.py  moduleB.f90  test_fortdepend.py  test_fortranfile.py  test_fortranmodule.py  test_fortranproject.py  test_smartopen.py  tests.dot
(+25 files in other folders)
