[metadata]
name = fortdepend
description = Automatically generate Fortran dependencies
long_description = file: README.md
long_description_content_type = text/markdown
author = Peter Hill
author_email = peter@fusionplasma.co.uk
url = https://github.com/ZedThree/fort_depend.py/
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Fortran
keywords = build, dependencies, fortran

[options]
packages = find:
install_requires =
    colorama >= 0.3.9
    pcpp >= 1.1.0

[options.extras_require]
tests =
    pytest >= 3.3.0
docs =
    sphinx >= 1.4
    sphinx-argparse >= 0.2.3

[options.entry_points]
console_scripts =
    fortdepend = fortdepend.__main__:main

[build_sphinx]
source-dir = docs

[bdist_wheel]
universal=1

[tool:pytest]
norecursedirs = bin include lib lib64 *egg-info
